[package]
name = "file_sharing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {  version = "4.4", features = ["derive"] }
bounded-vec = { version = "0.7", features = ["serde"] }
futures = "0.3"
libp2p = { version = "0.53.1", features = [
    "cbor",
    "tokio",
    "quic",
    "mdns",
    "floodsub",
    "serde",
    "full",
    "request-response",
] }
libp2p-mplex = "0.41.0"
libp2p-quic = "0.10.1"
libp2p-stream = "0.1.0-alpha"
log = { version = "0.4", features = [] }
memmap2 = { "version" = "0.9" }
pretty_env_logger = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.0"
tokio = { version = "1.34", features = ["full", "fs", "io-util", "net"] }
